--- a/Quadratic Grapher/qgrapher.html
+++ b/Quadratic Grapher/qgrapher.html
@@ -43,8 +43,9 @@
        <p id="roots2"></p>
     </div>
     
-    <script src="./chart.js-4.4.3/package/dist/chart.umd.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script src="qgrapher2.js"></script>
   
 </body>
 </html>
+    
