--- a/Quadratic Grapher/qgrapher.html
+++ b/Quadratic Grapher/qgrapher.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="qgrapher.css">
     
-    <title>Qudratic Grapher</title>
+    <title>Q Grapher</title>
 </head>
 
 <body id="body">
