Updating the meta tags

--- a/Quadratic Grapher/qgrapher.html
+++ b/Quadratic Grapher/qgrapher.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="This is a the skeleton of all html docs i'll be using.">
-    <meta name="keywords" content="HTML, CSS, DOCUMENT, SKELETON, STRUCTURE">
+    <meta name="description" content="This is an app to draw quadratic graphs using the equation ax² + bx + c = 0">
+    <meta name="keywords" content="Quadratic Equation, Quadratic Graph, Quadratic, Grapher, Graph">
     <meta name="author" content="Erick Njagi">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="qgrapher.css">
