--- a/Unit Converter/unit_converter.html
+++ b/Unit Converter/unit_converter.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="This is a the skeleton of all html docs i'll be using.">
-    <meta name="keywords" content="HTML, CSS, DOCUMENT, SKELETON, STRUCTURE">
+    <meta name="description" content="This is an app to convert units. Its a unit converter.">
+    <meta name="keywords" content="TIME, LENGTH, MONEY, MASS, UNIT CONVERTER, CONVERTER">
     <meta name="author" content="Erick Njagi">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="unit_converter.css">
