--- a/Digital Clock/clock.html
+++ b/Digital Clock/clock.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="JavaScript digital clock.">
+    <meta name="keywords" content="DIGITAL CLOCK USING JAVASCRIPT, JAVASCRIPT CLOCK">
     <meta name="author" content="Erick Njagi">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="clock.css">
@@ -14,7 +14,8 @@
 <body id="body">
     <!-- HEADER -->
     <h1>Digital Clock</h1>
-    
+
+    <!-- CLOCK CONTENT -->
     <div id="clock-content">
         <div id="hour" class="clock">00</div><span class="dot">:</span>
         <div id="min" class="clock">00</div><span class="dot">:</span>
